--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://alexsjob89.github.io/invoice-list-react",
+    "homepage": "https://alexsjob89.github.io/invoice-list-react/",
 
     "name": "invoice-list",
     "version": "0.1.0",
